# EsercizioLaboratorio

./: AccountDatabase.cpp  AccountDatabase.h  AccountManager.cpp  AccountManager.h  BankAccount.cpp  BankAccount.h  CMakeLists.txt  Exceptions.h  Transaction.cpp  Transaction.h  main.cpp
accounts/: 0
test/: AccountFixture.cpp  AccountTest.cpp  CMakeLists.txt
